--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation dep.butterKnife
     implementation project(':FlycoTabLayout_Lib')
     implementation files('libs/pinyin4j-2.5.0.jar')
+
+    implementation 'com.hyman:flowlayout-lib:1.1.2'
 }
