--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,8 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity android:name=".dealer.ui.activity.StoreManagerActivity" />
-        <activity android:name=".dealer.ui.activity.StoreSearchActivity"></activity>
+        <activity android:name=".dealer.ui.activity.StoreSearchActivity" />
+        <activity android:name=".share.SharedActivity"></activity>
     </application>
 
 </manifest>
