--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
         <activity android:name=".dealer.ui.activity.NationSourceActivity" />
         <activity android:name=".dealer.ui.activity.PutAwayDetailActivity" />
         <activity android:name=".dealer.ui.activity.AllSourceSearchActivity" />
-        <activity android:name=".market.ui.MarketSearchActivity"></activity>
+        <activity android:name=".market.ui.MarketSearchActivity" />
     </application>
 
 </manifest>
