--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,7 +78,8 @@
         <activity android:name=".dealer.ui.activity.AllSourceSearchActivity" />
         <activity android:name=".market.ui.MarketSearchActivity" />
         <activity android:name=".usercenter.DealershipActivity" />
-        <activity android:name=".options.VehicleheatActivity"></activity>
+        <activity android:name=".options.VehicleheatActivity" />
+        <activity android:name=".market.ui.MarketShareActivity"></activity>
     </application>
 
 </manifest>
