--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,7 @@
         <activity android:name=".dealer.ui.activity.ClientListActivity" />
         <activity android:name=".dealer.ui.activity.ReportCarListActivity" />
         <activity android:name=".market.ui.MarketStoreShareActivity" />
+        <activity android:name=".dealer.ui.activity.StoreReportActivity" />
     </application>
 
 </manifest>
