--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,7 +96,8 @@
         <activity android:name=".dealer.ui.activity.CreateNewCustomerActivity" />
         <activity android:name=".dealer.ui.activity.CustomerDetailActivity" />
         <activity android:name=".dealer.ui.activity.EditCustomerMessageActivity" />
-        <activity android:name=".dealer.ui.activity.EditCustomerNeedActivity"></activity>
+        <activity android:name=".dealer.ui.activity.EditCustomerNeedActivity" />
+        <activity android:name=".dealer.ui.activity.CustomerCarWantActivity"></activity>
     </application>
 
 </manifest>
