--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <application
         android:name=".MyApplication"
@@ -59,8 +59,7 @@
         <activity
             android:name=".options.ChooseModelActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|stateHidden"
-            />
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".options.ChooseAreaActivity"
             android:screenOrientation="portrait"
@@ -100,8 +99,9 @@
         <activity android:name=".dealer.ui.activity.CustomerDetailActivity" />
         <activity android:name=".dealer.ui.activity.EditCustomerMessageActivity" />
         <activity android:name=".dealer.ui.activity.EditCustomerNeedActivity" />
-        <activity android:name=".dealer.ui.activity.CustomerCarWantActivity"></activity>
-        <activity android:name=".dealer.ui.activity.SalerManagerActivity"></activity>
+        <activity android:name=".dealer.ui.activity.CustomerCarWantActivity" />
+        <activity android:name=".dealer.ui.activity.SalerManagerActivity" />
+        <activity android:name=".dealer.ui.activity.CustomerFollowActivity"></activity>
     </application>
 
 </manifest>
