--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:replace="android:name">
+        android:theme="@style/AppTheme">
         <activity android:name=".main.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -108,20 +107,6 @@
         <activity android:name=".dealer.ui.activity.SalerManagerActivity" />
         <activity android:name=".usercenter.ModifyPasswordActivity" />
         <activity android:name=".dealer.ui.activity.CustomerFollowActivity"></activity>
-        <activity
-            android:name=".wxapi.WXEntryActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:launchMode="singleTop"
-            android:theme="@android:style/Theme.Translucent">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:scheme="sdksample" />
-            </intent-filter>
-        </activity>
         <activity android:name=".market.ui.MarketShareCarActivity" />
         <activity android:name=".market.ui.MarketShareWechatActivity"></activity>
     </application>
