--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,18 +19,38 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+
+//    signingConfigs {
+//        business {
+//            keyAlias 'cheeshou'
+//            keyPassword 'Cys123456'
+//            storeFile file('keystore')
+//            storePassword 'Cys123456'
+//        }
+//    }
+//    buildTypes {
+//        release {
+//            //是否启用代码混淆
+//            shrinkResources false
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            signingConfig signingConfigs.business
+//
+//        }
+//        debug {
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            signingConfig signingConfigs.business
+//        }
+//    }
 }
+
+
+
 MobSDK {
     appKey "277b8297516c2"
     appSecret "60fcc2ecab10c8d2e06451bdbfe8b260"
     ShareSDK {
-        version '3.2.1.1'
+//        version '3.2.1.1'
         devInfo {
             Wechat {
                 appId "wx9dcadfab00b72712"
