--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,28 +21,28 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
-    signingConfigs {
-        business {
-            keyAlias 'cheeshou'
-            keyPassword 'Cys123456'
-            storeFile file('keystore')
-            storePassword 'Cys123456'
-        }
-    }
-    buildTypes {
-        release {
-            //是否启用代码混淆
-            shrinkResources false
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.business
-
-        }
-        debug {
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.business
-        }
-    }
+//    signingConfigs {
+//        business {
+//            keyAlias 'cheeshou'
+//            keyPassword 'Cys123456'
+//            storeFile file('keystore')
+//            storePassword 'Cys123456'
+//        }
+//    }
+//    buildTypes {
+//        release {
+//            //是否启用代码混淆
+//            shrinkResources false
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            signingConfig signingConfigs.business
+//
+//        }
+//        debug {
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            signingConfig signingConfigs.business
+//        }
+//    }
 }
 
 
@@ -51,7 +51,7 @@ MobSDK {
     appKey "277b8297516c2"
     appSecret "60fcc2ecab10c8d2e06451bdbfe8b260"
     ShareSDK {
-//        version '3.2.1.1'
+        version '3.2.1.1'
         devInfo {
             Wechat {
                 appId "wx9dcadfab00b72712"
@@ -63,6 +63,15 @@ MobSDK {
                 bypassApproval false
             }
             WechatMoments {
+                appId "wx9dcadfab00b72712"
+                appSecret "976a1ae11135a6763c849d8344b412b6"
+                userName "gh_afb25ac019c9"
+                path "pages/index/index.html?id=1"
+                withShareTicket true
+                miniprogramType 2
+                bypassApproval true
+            }
+            WeChatFavorite {
                 appId "wx9dcadfab00b72712"
                 appSecret "976a1ae11135a6763c849d8344b412b6"
                 userName "gh_afb25ac019c9"
