--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,7 +98,7 @@
         <activity android:name=".dealer.ui.activity.ReportCarListActivity" />
         <activity android:name=".market.ui.MarketStoreShareActivity" />
         <activity android:name=".dealer.ui.activity.StoreReportActivity" />
-        <activity android:name=".order.OrderListActivity" />
+        <activity android:name=".order.OrderManagerActivity" />
         <activity android:name=".dealer.ui.activity.CustomerManagerActivity" />
         <activity android:name=".dealer.ui.activity.CreateNewCustomerActivity" />
         <activity android:name=".dealer.ui.activity.CustomerDetailActivity" />
